# NV09224802

./: .env.example  .gitignore  AGENT.md  Dockerfile  README.md  docx_content.txt  package-lock.json  package.json  project_structure.txt  railpack.json  read_docx.py  turbo.json
backend/: .env.example  debug_payload.json  err2.txt  err3.txt  err_log.txt  pyproject.toml  railpack.json  requirements.txt  revert.py  store_faq.yaml  temp_webhooks_github.py  tenants.txt  tenants.yaml  test_dialog.txt  test_rag.py  test_sales_manual.py  test_sales_real.py  test_server.py  test_session_store.py
backend/app/adapters/: __init__.py  base_adapter.py  evolution_adapter.py  (+3 more)
backend/migrations/: 001_create_product_embeddings.sql  add_webhook_secret.sql
backend/scripts/: add_custom_products.py  capture_payload.py  check_evolution_config.py  check_evolution_instance.py  check_locations.py  cli_chat.py  debug_rag_search.py  debug_tenant_config.py  debug_variant_flow.py  debug_webhook.py  debug_webhook_flow.py  redis_cli.py  seed_knowledge_base.py  seed_supabase.py  setup_evolution_webhook.py  simulate_self_message.py  simulate_webhook.py  sync_products.py  test_debug_route.py  test_evolution_send.py  test_evolution_v2.py  test_health.py  test_humanizer.py  test_ignored_routes.py  test_ngrok_url.py  test_other_number.py  test_post_custom.py  test_post_health.py  test_prompt_fix.py  test_rag_search.py  test_variant_llm.py  test_webhook_local.py  test_webhook_simple.py  trigger_test.py  update_evolution.py  update_twilio_tenant.py  verify_tenant.py
backend/tests/: test_webhooks.py
(+155 files in other folders)
